--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.16",
 		"@tanstack/react-query": "^5.62.10",
+		"motion": "^12.23.26",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
 		"react-helmet-async": "^2.0.5",
