--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
 		"svgr": "npx @svgr/cli --typescript --out-dir src/components/common/icon src/assets/icons"
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.2",
 		"@tailwindcss/vite": "^4.1.16",
 		"@tanstack/react-query": "^5.62.10",
+		"gsap": "^3.14.2",
+		"lenis": "^1.3.17",
 		"motion": "^12.23.26",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
