--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@gsap/react": "^2.1.2",
 		"@tailwindcss/vite": "^4.1.16",
 		"@tanstack/react-query": "^5.62.10",
+		"firebase": "^12.9.0",
 		"gsap": "^3.14.2",
 		"lenis": "^1.3.17",
 		"motion": "^12.23.26",
